--- a/menu2.html
+++ b/menu2.html
@@ -15,9 +15,9 @@
 
     <section>
         <div id="groupetrait">
-            <div class="trait1menu2-"></div>
+            <div class="trait1menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
             <h2 class="titresousmenu2-">Pour se mettre en appétit</h2>
-            <div class="trait2menu2-"></div>
+            <div class="trait2menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
         </div>
         <ul class="colortext1menu2">
             <li class="textmenu"><p>Tartare de poulpe acidulé aux zests d'orange</p><p>79€</p></li>
@@ -25,9 +25,9 @@
             <li class="textmenu"><p>Soupe à l'oignon revisitée</p><p>57€</p></li>
         </ul>            
         <div id="groupetrait">    
-            <div class="trait1menu2--"></div>
+            <div class="trait1menu2--"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/></g></svg></div>
             <h2 class="titresousmenu2--">Plaisir des papilles</h2>
-            <div class="trait2menu2--"></div>
+            <div class="trait2menu2--"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/></g></svg></div>
         </div>
         <ul class="colortext2menu2">
             <li class="textmenu"><p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p><p>95€</p></li>
@@ -35,9 +35,9 @@
             <li class="textmenu"><p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p><p>175€</p></li>
         </ul>           
         <div id="groupetrait">    
-            <div class="trait1menu2---"></div>
+            <div class="trait1menu2---"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/></g></svg></div>
             <h2 class="titresousmenu2---">Gourmandises sucrées</h2>
-            <div class="trait2menu2---"></div>
+            <div class="trait2menu2---"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/></g></svg></div>
         </div>
         <ul class="colortext3menu2">
             <li class="textmenu"><p>Pétales de violettes glacés et purée de noisettes</p></li>
