rajout police, modif media

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <script src="https://kit.fontawesome.com/72ae1aac55.js"></script>
+            <meta name=viewport content="width=device-width, initial-scale=1">
             <title>Document</title>
             <link rel="stylesheet" href="style.css">
+            <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Lobster+Two&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Kavivanar&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Farsan&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Crimson+Pro&display=swap" rel="stylesheet">
+            <script src="https://kit.fontawesome.com/72ae1aac55.js"></script>
     </head>
-
-        <body>
-            
+        <body> 
             <!----------------------Bandeau haut---------------------->
             <header class="bandeautitre">
                 <h1 class="titre">ohmyfood</h1>
             </header>
-
             <!----------------------Corps du site---------------------->
             <section>
                 <div id="menu1234">
@@ -70,8 +74,5 @@
                 <a href="Mentionslégales.html"><h4 class="mentions">Mentions légales</h4></a>
                 <a href="mailto:benjicolle@gmail.com"><h4 class="contact">Contactez-nous</h4></a>
             </footer>
-
         </body>
-
-
 </html>
