--- a/menu3.html
+++ b/menu3.html
@@ -4,48 +4,49 @@
         <meta charset="utf-8" />
         <title>Le délice des papilles</title>
         <link rel="stylesheet" href="style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Farsan&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
     </head>
-
     <body class="backgroundmenu3">
-        
-
-    <header>
-        <h1 class="titremenu3bis">Le délice des papilles</h1>
-    </header>
-
-    <section>
-        <div id="groupetrait">
-            <div class="trait1menu3-"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M194.672,7.422l-186.026,-0.486c-3.355,-0.874 -5.742,-4.29 -8.526,-6.816c0.988,3.931 0.66,9.296 4.092,10.563l194.44,-0.262l-3.98,-2.999Z" style="fill:rgb(33, 30, 228);stroke:rgb(33, 30, 228);stroke-width:0.24px;"/></g></g></svg></div>
-            <h2 class="titresousmenu3">Pour bien commencer</h2>
-            <div class="trait2menu3-"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M4.1,7.422l186.027,-0.486c3.355,-0.874 5.741,-4.29 8.525,-6.816c-0.988,3.931 -0.66,9.296 -4.092,10.563l-194.44,-0.262l3.98,-2.999Z" style="fill:rgb(33, 30, 228);stroke:rgb(33, 30, 228);stroke-width:0.24px;"/></g></g></svg></div>
-        </div>
-        <ul>
-            <li class="textmenu"><p>Tartare de thon assaisonné au yuzu</p><p>55€</p></li>
-            <li class="textmenu"><p>Bouchée de homard croustillant et sa farandole de petits légumes</p><p>89€</p></li>
-            <li class="textmenu"><p>Velouté de crèpes aux truffes</p><p>56€</p></li>
-        </ul>            
-        <div id="groupetrait">    
-            <div class="trait1menu3--"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M194.672,7.422l-186.026,-0.486c-3.355,-0.874 -5.742,-4.29 -8.526,-6.816c0.988,3.931 0.66,9.296 4.092,10.563l194.44,-0.262l-3.98,-2.999Z" style="fill:rgb(63, 129, 252);stroke:rgb(63, 129, 252);stroke-width:0.24px;"/></g></g></svg></div>
-            <h2 class="titresousmenu3">Pour bien continuer</h2>
-            <div class="trait2menu3--"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M4.1,7.422l186.027,-0.486c3.355,-0.874 5.741,-4.29 8.525,-6.816c-0.988,3.931 -0.66,9.296 -4.092,10.563l-194.44,-0.262l3.98,-2.999Z" style="fill:rgb(63, 129, 252);stroke:rgb(63, 129, 252);stroke-width:0.24px;"/></g></g></svg></div>
-        </div>
-        <ul>
-            <li class="textmenu"><p>Poulet rôti aux herbes de provence et sa crème de truffe</p><p>110€</p></li>
-            <li class="textmenu"><p>Langouste rôtie et ses légumes de saison</p><p>225€</p></li>
-            <li class="textmenu"><p>Côte de boeuf angus et sa purée de panais</p><p>115€</p></li>
-        </ul>           
-        <div id="groupetrait">    
-            <div class="trait1menu3---"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M194.672,7.422l-186.026,-0.486c-3.355,-0.874 -5.742,-4.29 -8.526,-6.816c0.988,3.931 0.66,9.296 4.092,10.563l194.44,-0.262l-3.98,-2.999Z" style="fill:rgb(63, 192, 252);stroke:rgb(63, 192, 252);stroke-width:0.24px;"/></g></g></svg></div>
-            <h2 class="titresousmenu3">Pour bien terminer</h2>
-            <div class="trait2menu3---"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M4.1,7.422l186.027,-0.486c3.355,-0.874 5.741,-4.29 8.525,-6.816c-0.988,3.931 -0.66,9.296 -4.092,10.563l-194.44,-0.262l3.98,-2.999Z" style="fill:rgb(63, 192, 252);stroke:rgb(63, 192, 252);stroke-width:0.24px;"/></g></g></svg></div>
-        </div>
-        <ul>
-            <li class="textmenu"><p>Farandole de desserts du chef</p><p>55€</p></li>
-            <li class="textmenu"><p>Crème brulée revisitée</p><p>60€</p></li>
-            <li class="textmenu"><p>Tiramisu à la noisette</p><p>55€</p></li>
-        </ul>
-    </section>
-
+        <header class="bandeautitre">
+            <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
+        </header>
+        <section>
+            <h1 class="titremenu3bis">Le délice des papilles</h1>
+            <div id="groupetrait">
+                <div class="trait1menu3-"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M194.672,7.422l-186.026,-0.486c-3.355,-0.874 -5.742,-4.29 -8.526,-6.816c0.988,3.931 0.66,9.296 4.092,10.563l194.44,-0.262l-3.98,-2.999Z" style="fill:rgb(33, 30, 228);stroke:rgb(33, 30, 228);stroke-width:0.24px;"/></g></g></svg></div>
+                <h2 class="titresousmenu3-">Pour bien commencer</h2>
+                <div class="trait2menu3-"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M4.1,7.422l186.027,-0.486c3.355,-0.874 5.741,-4.29 8.525,-6.816c-0.988,3.931 -0.66,9.296 -4.092,10.563l-194.44,-0.262l3.98,-2.999Z" style="fill:rgb(33, 30, 228);stroke:rgb(33, 30, 228);stroke-width:0.24px;"/></g></g></svg></div>
+            </div>
+            <ul class="colortextemenu3">
+                <li class="textmenu"><p>Tartare de thon assaisonné au yuzu</p><p>55€</p></li>
+                <li class="textmenu"><p>Bouchée de homard croustillant et sa farandole de petits légumes</p><p>89€</p></li>
+                <li class="textmenu"><p>Velouté de crèpes aux truffes</p><p>56€</p></li>
+            </ul>            
+            <div id="groupetrait">    
+                <div class="trait1menu3--"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M194.672,7.422l-186.026,-0.486c-3.355,-0.874 -5.742,-4.29 -8.526,-6.816c0.988,3.931 0.66,9.296 4.092,10.563l194.44,-0.262l-3.98,-2.999Z" style="fill:rgb(63, 129, 252);stroke:rgb(63, 129, 252);stroke-width:0.24px;"/></g></g></svg></div>
+                <h2 class="titresousmenu3--">Pour bien continuer</h2>
+                <div class="trait2menu3--"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M4.1,7.422l186.027,-0.486c3.355,-0.874 5.741,-4.29 8.525,-6.816c-0.988,3.931 -0.66,9.296 -4.092,10.563l-194.44,-0.262l3.98,-2.999Z" style="fill:rgb(63, 129, 252);stroke:rgb(63, 129, 252);stroke-width:0.24px;"/></g></g></svg></div>
+            </div>
+            <ul class="colortextemenu3">
+                <li class="textmenu"><p>Poulet rôti aux herbes de provence et sa crème de truffe</p><p>110€</p></li>
+                <li class="textmenu"><p>Langouste rôtie et ses légumes de saison</p><p>225€</p></li>
+                <li class="textmenu"><p>Côte de boeuf angus et sa purée de panais</p><p>115€</p></li>
+            </ul>           
+            <div id="groupetrait">    
+                <div class="trait1menu3---"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M194.672,7.422l-186.026,-0.486c-3.355,-0.874 -5.742,-4.29 -8.526,-6.816c0.988,3.931 0.66,9.296 4.092,10.563l194.44,-0.262l-3.98,-2.999Z" style="fill:rgb(63, 192, 252);stroke:rgb(63, 192, 252);stroke-width:0.24px;"/></g></g></svg></div>
+                <h2 class="titresousmenu3---">Pour bien terminer</h2>
+                <div class="trait2menu3---"><svg width="100%" height="100%" viewBox="0 0 199 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><g><path d="M4.1,7.422l186.027,-0.486c3.355,-0.874 5.741,-4.29 8.525,-6.816c-0.988,3.931 -0.66,9.296 -4.092,10.563l-194.44,-0.262l3.98,-2.999Z" style="fill:rgb(63, 192, 252);stroke:rgb(63, 192, 252);stroke-width:0.24px;"/></g></g></svg></div>
+            </div>
+            <ul class="colortextemenu3">
+                <li class="textmenu"><p>Farandole de desserts du chef</p><p>55€</p></li>
+                <li class="textmenu"><p>Crème brulée revisitée</p><p>60€</p></li>
+                <li class="textmenu"><p>Tiramisu à la noisette</p><p>55€</p></li>
+            </ul>
+            <footer class="bandeaufooter">
+                <a href="Mentionslégales.html"><h4 class="mentions">Mentions légales</h4></a>
+                <a href="mailto:benjicolle@gmail.com"><h4 class="contact">Contactez-nous</h4></a>
+            </footer>
+        </section>
     </body>
-
 </html>
