--- a/menu2.html
+++ b/menu2.html
@@ -4,48 +4,50 @@
         <meta charset="utf-8" />
         <title>Le chic à la française</title>
         <link rel="stylesheet" href="style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Lobster+Two&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Pro&display=swap" rel="stylesheet">
     </head>
-
     <body class="backgroundmenu2">
-        
+        <header class="bandeautitre">
+            <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
+        </header>
+        <section>
+            <h1 class="titremenu2bis">Le chic à la française</h1>
+            <div id="groupetrait">
+                <div class="trait1menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
+                <h2 class="titresousmenu2-">Pour se mettre en appétit</h2>
+                <div class="trait2menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
+            </div>
+            <ul class="colortext1menu2">
+                <li class="textmenu"><p>Tartare de poulpe acidulé aux zests d'orange</p><p>79€</p></li>
+                <li class="textmenu"><p>Velouté de légumes d'antan</p><p>57€</p></li>
+                <li class="textmenu"><p>Soupe à l'oignon revisitée</p><p>57€</p></li>
+            </ul>            
+            <div id="groupetrait">    
+                <div class="trait1menu2--"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/></g></svg></div>
+                <h2 class="titresousmenu2--">Plaisir des papilles</h2>
+                <div class="trait2menu2--"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/></g></svg></div>
+            </div>
+            <ul class="colortext2menu2">
+                <li class="textmenu"><p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p><p>95€</p></li>
+                <li class="textmenu"><p>Magret de canard et parmentier de pommes de terres</p><p>88€</p></li>
+                <li class="textmenu"><p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p><p>175€</p></li>
+            </ul>           
+            <div id="groupetrait">    
+                <div class="trait1menu2---"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/></g></svg></div>
+                <h2 class="titresousmenu2---">Gourmandises sucrées</h2>
+                <div class="trait2menu2---"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/></g></svg></div>
+            </div>
+            <ul class="colortext3menu2">
+                <li class="textmenu"><p>Pétales de violettes glacés et purée de noisettes</p></li>
+                <li class="textmenu"><p>Fondant au chocolat revisité</p></li>
+                <li class="textmenu"><p>Millefeuille croustillant</p></li>
+            </ul>
 
-    <header>
-        <h1 class="titremenu2bis">Le chic à la française</h1>
-    </header>
-
-    <section>
-        <div id="groupetrait">
-            <div class="trait1menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
-            <h2 class="titresousmenu2-">Pour se mettre en appétit</h2>
-            <div class="trait2menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
-        </div>
-        <ul class="colortext1menu2">
-            <li class="textmenu"><p>Tartare de poulpe acidulé aux zests d'orange</p><p>79€</p></li>
-            <li class="textmenu"><p>Velouté de légumes d'antan</p><p>57€</p></li>
-            <li class="textmenu"><p>Soupe à l'oignon revisitée</p><p>57€</p></li>
-        </ul>            
-        <div id="groupetrait">    
-            <div class="trait1menu2--"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/></g></svg></div>
-            <h2 class="titresousmenu2--">Plaisir des papilles</h2>
-            <div class="trait2menu2--"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(147, 82, 231);stroke:rgb(147, 82, 231);stroke-width:0.24px;"/></g></svg></div>
-        </div>
-        <ul class="colortext2menu2">
-            <li class="textmenu"><p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p><p>95€</p></li>
-            <li class="textmenu"><p>Magret de canard et parmentier de pommes de terres</p><p>88€</p></li>
-            <li class="textmenu"><p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p><p>175€</p></li>
-        </ul>           
-        <div id="groupetrait">    
-            <div class="trait1menu2---"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/></g></svg></div>
-            <h2 class="titresousmenu2---">Gourmandises sucrées</h2>
-            <div class="trait2menu2---"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M187.758,4.463c-59.956,-0.382 -119.645,-0.935 -174.924,-4.343c-3.152,1.778 -6.594,4.388 -12.714,4.27" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/><path d="M187.758,4.463c-59.956,0.381 -119.645,0.934 -174.924,4.342c-3.152,-1.778 -6.594,-4.529 -12.714,-4.411" style="fill:rgb(78, 67, 233);stroke:rgb(78, 67, 233);stroke-width:0.24px;"/></g></svg></div>
-        </div>
-        <ul class="colortext3menu2">
-            <li class="textmenu"><p>Pétales de violettes glacés et purée de noisettes</p></li>
-            <li class="textmenu"><p>Fondant au chocolat revisité</p></li>
-            <li class="textmenu"><p>Millefeuille croustillant</p></li>
-        </ul>
-    </section>
-    
+            <footer class="bandeaufooter">
+                <a href="Mentionslégales.html"><h4 class="mentions">Mentions légales</h4></a>
+                <a href="mailto:benjicolle@gmail.com"><h4 class="contact">Contactez-nous</h4></a>
+            </footer>
+        </section>
     </body>
-
 </html>
