--- a/Mentionslégales.html
+++ b/Mentionslégales.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Mention Légales</title>
+        <title>Mentions Légales</title>
         <link rel="stylesheet" href="style.css" />
         <link href="https://fonts.googleapis.com/css?family=Mate+SC&display=swap" rel="stylesheet">
     </head>
