--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
             <meta name=viewport content="width=device-width, initial-scale=1">
-            <title>Document</title>
+            <title>OhMyFood</title>
             <link rel="stylesheet" href="style.css">
             <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Lobster+Two&display=swap" rel="stylesheet">
