Rajout meta, groupement front

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
             <meta name=viewport content="width=device-width, initial-scale=1">
+            <meta name="description" content="Site Internet regroupant les restaurants du groupe OhMyFood">
+            <meta name="keywords" content="OhMyFood, restaurants, Menu, La note enchantée, Le chic à la française, Le délice des papilles, La palette du goût">
             <title>OhMyFood</title>
             <link rel="stylesheet" href="style.css">
             <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
