--- a/menu1.html
+++ b/menu1.html
@@ -16,7 +16,7 @@
             <div id="logo1menu1"><i class="fab fa-itunes-note"></i></div>
             <h2>La note enchantée</h2>
         </section>
-        <section>
+        <section class="front134">
             <div class="groupetrait">
                 <div class="trait1menu1"><svg width="100%" height="100%" viewBox="0 0 133 5" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><path d="M3.623,1.282c-1.931,1.41 -5.551,3.434 -2.011,2.851c12.92,-0.079 27.176,0.588 38.058,-0.631c8.403,-0.98 34.601,0.01 52.269,0.111c10.552,0.226 11.945,0.548 39.111,0.598c3.385,-0.926 1.213,-1.196 -0.1,-1.567c-10.055,-2.048 -15.355,-2.664 -34.767,-2.498c-20.111,1.092 -37.567,-0.079 -55.941,0.566c-11.959,-0.953 -24.335,0.02 -36.619,0.57Z" style="fill:rgb(85, 61, 30);stroke:rgb(85, 61, 30);stroke-width:0.24px;"/></svg></div>
                 <h2 class="titresousmenu1">Prélude</h2>
