--- a/menu2.html
+++ b/menu2.html
@@ -11,7 +11,7 @@
         <header class="bandeautitre">
             <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
         </header>
-        <section>
+        <section class="front2">
             <h2 class="titremenu2bis">Le chic à la française</h2>
             <div class="groupetrait">
                 <div class="trait1menu2-"><svg width="100%" height="100%" viewBox="0 0 188 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M0.12,4.463c59.956,-0.382 119.646,-0.935 174.924,-4.343c3.152,1.778 6.594,4.388 12.714,4.27" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/><path d="M0.12,4.463c59.956,0.381 119.646,0.934 174.924,4.342c3.152,-1.778 6.594,-4.529 12.714,-4.411" style="fill:rgb(243, 180, 43);stroke:rgb(243, 180, 43);stroke-width:0.24px;"/></g></svg></div>
