--- a/menu4.html
+++ b/menu4.html
@@ -11,7 +11,7 @@
         <header class="bandeautitre">
             <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
         </header>
-        <section>
+        <section class="front134">
             <h2 class="titremenu4bis">La palette du goût</h2>
             <div class="groupetrait">
                 <div class="trait1menu4"><svg width="100%" height="100%" viewBox="0 0 228 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;"><g><path d="M227.616,6.52c-5.822,-1.408 -20.056,-6.508 -23.042,-4.615c-7.759,0.443 -8.368,1.475 -22.437,1.055c-0.587,-0.093 -20.704,-0.834 -26.845,-1.32c-14.01,4.047 -15.499,0.437 -42.662,1.024c-12.26,-1.128 -15.698,0.16 -25.872,-1.163c-10.751,-0.216 -22.591,-1.871 -31.455,0.404c-8.75,0.839 -17.502,-0.427 -26.251,-1.448c-4.821,0.183 -9.001,-0.193 -11.689,0.358c-11.338,-1.052 -6.675,-0.662 -15.252,-0.417c-4.226,0.995 -0.398,4.758 -0.481,7.553c5.717,0.662 9.721,-0.948 14.545,-0.089c2.874,-0.851 9.546,-1.447 13.362,-1.291l18.765,1.55c7.759,-0.657 15.324,-1.673 21.843,-0.733c9.808,-0.577 19.945,-0.963 30.222,0.447c12.931,-0.371 26.078,0.048 39.672,1.124c5.584,-0.194 14.497,-0.656 16.854,-1.456c18.455,1.825 10.83,0.172 20.142,1.181c7.645,0.8 14.562,-1.182 23.817,-1.003c5.559,-1.114 15.608,1.845 25.192,1.338c-2.058,-1.443 -7.42,-2.082 -11.785,-2.964c4.212,0.521 7.545,0.5 12.873,1.71c0.767,-0.716 0.507,-0.921 0.484,-1.245Z" style="fill:rgb(97, 175, 52);stroke:rgb(97, 175, 52);stroke-width:0.24px;"/></g></svg></div>
